--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build-production": "react-scripts build ; rm -rf ../build",
+    "build": "react-scripts build ; rm -rf ../build",
     "test": "react-scripts test"
   },
   "eslintConfig": {
